--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "Connection": "Server=localhost;Database=meulivrodereceitas;Uid=root;Pwd=masterkey;"
+  },
+  "Settings": {
+    "Password": {
+      "AdditionalKey": "wwwwwwwwwwwwwww"
     }
   }
 }
