--- a/src/Backend/MyRecipeBook.Infrastructutre/MyRecipeBook.Infrastructutre.csproj
+++ b/src/Backend/MyRecipeBook.Infrastructutre/MyRecipeBook.Infrastructutre.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.0" />
   </ItemGroup>
 
   <ItemGroup>
