--- a/src/Backend/MyRecipeBook.API/appsettings.Development.json
+++ b/src/Backend/MyRecipeBook.API/appsettings.Development.json
@@ -5,6 +5,10 @@
   "Settings": {
     "Password": {
       "AdditionalKey": "wwwwwwwwwwwwwww"
+    },
+    "Jwt": {
+      "SigningKey": "wwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww",
+      "ExpirationTimeMinutes": 1000
     }
   }
 }
