Adding updates in error messages and usecases

--- a/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
+++ b/src/Backend/MyRecipeBook.Application/MyRecipeBook.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\MyRecipeBook.Domain\MyRecipeBook.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Cryptography\" />
+  </ItemGroup>
+
 </Project>
